# scanalyzer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PHASES_COMPLETE.md  README.md  claud.md  directory-structure.md  generate_phase_5_1_report.py  mkdocs.yml  package-lock.json  package.json  phase_4_1_complete.md  phase_5_1_implementation_summary.md  phase_5_1_validation_report.json  phase_5_2_complete.md  phase_6_complete.md  phase_7_documentation_complete.md  playwright.config.ts  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
backend/: .env.example  PHASE_4_2_COMPLETE.md  PYDANTIC_V2_MIGRATION.md  build.spec  cleanup_log.md  phase_2.1_complete.md  phase_2_2_cleanup_complete.md  phase_2_2_complete.md  phase_2_2_validation_report.md  phase_2_3_cleanup.md  phase_2_3_complete.md  phase_3_1_cleanup.md  phase_3_2_cleanup.md  phase_3_3_cleanup.md  phase_4_1_cleanup.md  phase_4_1_complete.md  phase_4_3_complete.md  phase_4_3_validation_report.md  pyproject.toml  requirements.txt  setup_status.md
backend/app/: __init__.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: __init__.py  findings.py  health.py  parsers.py  reports.py  system.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/models/: __init__.py  finding.py  processing_queue.py  report.py
backend/app/parsers/: __init__.py  base.py  factory.py  registry.py
backend/app/parsers/bandit/: __init__.py  bandit_parser.py
backend/app/parsers/checkov/: __init__.py  checkov_parser.py
backend/app/parsers/document/: __init__.py  docx.py  patterns.py  pdf.py  spreadsheet.py
backend/app/parsers/prowler/: __init__.py  prowler_v2_parser.py  prowler_v3_parser.py
backend/app/schemas/: __init__.py  common.py  finding.py  report.py
backend/app/services/: __init__.py  cleanup_service.py  storage_service.py
backend/app/utils/: __init__.py  file_utils.py
backend/electron/main/utils/: env.ts  security.ts
backend/electron/tests/phase_4_1_validation/: __init__.ts
backend/tests/fixtures/: generators.py
backend/tests/fixtures/reports/: sample-bandit.json  sample-checkov.json  sample-nmap.xml  test-report-0.xml
backend/tests/performance/database/: test_query_optimization.py
backend/tests/performance/parsing/: test_parser_benchmarks.py
backend/tests/phase_5_1_validation/: __init__.py  test_websocket.py
backend/tests/unit/parsers/: test_parser_accuracy.py
backend/tests/unit/services/: test_finding_service.py
certificates/: README.md
docs/: README.md  index.md
docs/user-guide/: getting-started.md
docs/video-scripts/: 01-getting-started.md  02-advanced-filtering.md
electron/: electron-builder.config.js  phase_4_1_cleanup.md  tsconfig.json
electron/main/: backend.ts  index.ts  ipc.ts  menu.ts  window.ts
frontend/: electron-env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: build-docs.sh  generate-screenshots.ts  release.sh  validate-docs.ts
tests/: validate-build.ts  validate-test-suite.ts
(+99 files in other folders)
